Issue #161 : fixed placeholder on mobile view

--- a/styles/custom-css/eprofile.css
+++ b/styles/custom-css/eprofile.css
@@ -404,6 +404,11 @@ transform: translate3d(-100px, 24px, 0px) !important;
   padding: 0 0.45rem;
 }
 
+.formCol {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 
 }
 
